fix dropdown values visibility
- відображення регулярних платежів в дропдаун
- відображення тексту заглушки коли не знайдено регулярні платежі
- додав ховер до кнопок

--- a/src/shared/styles/_mixins.scss
+++ b/src/shared/styles/_mixins.scss
@@ -62,5 +62,5 @@ screen types:
 }
 
 @mixin animation-rules($_prop: all, $_duration: 0.3s) {
-  transition: $_prop $_duration ease;
+  transition: $_prop $_duration ease-in-out;
 }
